--- a/templates/components/alerts.html
+++ b/templates/components/alerts.html
@@ -1,5 +1,5 @@
 {% if msg %} 
-    <div class="alert alert-info" role="alert">
+<div class="alert alert-warning" role="alert">
     {{msg}}
-    </div>
-{% endif %} 
+  </div>
+{% endif %}
