--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#"> 
-        <img src={{url_for('static', path='images/logo.png')}} alt = "Jobboard navbar image", width="60", height="50">
+    <div class="container-fluid px-5">
+      <a class="navbar-brand" href="#">
+        <img src="{{ url_for('static',path='images/logo.png') }}" alt="Jobboard navbar image" width="30" height="24">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -16,20 +16,29 @@
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Account
+              Acounts
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="/register/">Register</a></li>
-              <li><a class="dropdown-item" href="/login/">LogIn</a></li>
-              <li><a class="dropdown-item" href="/post-a-job/">Post a job</a></li>
-              <li><a class="dropdown-item" href="/delete-job/">Delete a job</a></li>
+              <li><a class="dropdown-item" href="/login/">Login</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Jobs
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="/post-a-job/">Post Job</a></li>
+              <li><a class="dropdown-item" href="/delete-job/">Delete Job</a></li>
             </ul>
           </li>
         </ul>
-        <form class="d-flex"  action="/search/">
-          <input class="form-control me-2" name="query" id="autocomplete" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-primary" type="submit">Search</button>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
       </div>
     </div>
-</nav>
+  </nav>
