--- a/templates/jobs/create_job.html
+++ b/templates/jobs/create_job.html
@@ -1,9 +1,10 @@
 {% extends "shared/base.html" %}
-      
+
+
 {% block title %}
   <title>Create a Job Post</title>
 {% endblock %}
- 
+
 {% block content %}
   <div class="container">
     <div class="row">
@@ -13,9 +14,9 @@
         {% endfor %}
       </div>
     </div>
- 
+
     <div class="row my-5">
-      <h3 class="text-primary text-center display-6">Create a Job Post</h3>
+      <h3 class="text-center display-4">Create a Job Post</h3>
       <form method="POST">
         <div class="mb-3">
           <input type="text" required class="form-control" name="title" value="{{title}}" placeholder="Job Title here">
@@ -33,7 +34,7 @@
           <label for="exampleFormControlTextarea1" class="form-label">Description</label>
           <textarea class="form-control" required name="description" id="exampleFormControlTextarea1" rows="3">{{description}}</textarea>
           <div id="help" class="form-text">Please provide complete Job description,requirements,perks and benefits.</div>
- 
+
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
