--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -6,8 +6,10 @@
 
 {% block content %}
   <div class="container">
+    <br>
     <div class="row">
-      <h5 class="display-5">Login to JobBoard</h5>
+      <br>
+      <h5 class="display-5 text-primary">Login to JobBoard</h5>
       <div class="text-danger font-weight-bold">
           {% for error in errors %}
             <li>{{error}}</li>
