--- a/templates/jobs/detail.html
+++ b/templates/jobs/detail.html
@@ -7,7 +7,8 @@
 
 {% block content %} 
 <div class="container">
-      <h1 class="display-4 text-danger">Job Detail</h1>
+  <br>
+      <h1 class="display-4 text-primary">Job Detail</h1>
       <table class="table">
         <tbody>
           <tr>
