--- a/templates/jobs/homepage.html
+++ b/templates/jobs/homepage.html
@@ -7,7 +7,8 @@
 
 {% block content %} 
 <div class="container">
-      <h1 class="display-4 text-danger">Find Jobs...</h1>
+  <br>
+      <h1 class="display-4 text-primary">Find Jobs...</h1>
 
   <div class="row">
     {% for job in jobs %}
