--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -6,7 +6,8 @@
 
 {% block content %} 
 <div class="container">
-      <h1 class="display-4 text-danger">Signup</h1>
+  <br>
+      <h1 class="display-5 text-primary">Signup</h1>
 
       <div class="text-danger font-weight-bold">
         {% for error in errors %} 
