--- a/templates/jobs/homepage.html
+++ b/templates/jobs/homepage.html
@@ -8,7 +8,7 @@
 {% block content %} 
 <div class="container">
   <br>
-      <h1 class="display-4 text-primary">Find Jobs...</h1>
+      <h1 class="text-center display-5 text-primary">Find Jobs...</h1>
 
   <div class="row">
     {% for job in jobs %}
