--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -9,7 +9,7 @@
     <br>
     <div class="row">
       <br>
-      <h5 class="display-5 text-primary">Login to JobBoard</h5>
+      <h5 class="text-center display-5 text-primary">Login to JobBoard</h5>
       <div class="text-danger font-weight-bold">
           {% for error in errors %}
             <li>{{error}}</li>
