--- a/templates/jobs/create_job.html
+++ b/templates/jobs/create_job.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="row my-5">
-      <h3 class="text-center display-4">Create a Job Post</h3>
+      <h3 class="text-center display-5 text-primary">Create a Job Post</h3>
       <form method="POST">
         <div class="mb-3">
           <input type="text" required class="form-control" name="title" value="{{title}}" placeholder="Job Title here">
