modifica centrado de titulos

--- a/templates/jobs/show_jobs_to_delete.html
+++ b/templates/jobs/show_jobs_to_delete.html
@@ -9,7 +9,8 @@
   <div class="container">
   <div class="row">
     <div class="col">
-      <h1 class="display-5 text-center text-danger mb-3">Delete Jobs</h1>
+    <br>
+      <h1 class="text-center display-5 text-danger mb-3">Delete Jobs</h1>
     </div>
     <div id="result" class="text-danger text-bold lead"></div>
   </div>
