--- a/templates/jobs/detail.html
+++ b/templates/jobs/detail.html
@@ -8,7 +8,7 @@
 {% block content %} 
 <div class="container">
   <br>
-      <h1 class="display-4 text-primary">Job Detail</h1>
+      <h1 class="text-center display-5 text-primary">Job Detail</h1>
       <table class="table">
         <tbody>
           <tr>
