--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -30,6 +30,7 @@
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="/post-a-job/">Post Job</a></li>
               <li><a class="dropdown-item" href="/delete-job/">Delete Job</a></li>
+              <li><a class="dropdown-item" href="/update-job/">Update Job</a></li>
             </ul>
           </li>
         </ul>
