--- a/templates/jobs/show_jobs_to_delete.html
+++ b/templates/jobs/show_jobs_to_delete.html
@@ -10,7 +10,7 @@
   <div class="row">
     <div class="col">
     <br>
-      <h1 class="text-center display-5 text-danger mb-3">Delete Jobs</h1>
+      <h1 class="display-5 text-danger mb-3">Delete Jobs</h1>
     </div>
     <div id="result" class="text-danger text-bold lead"></div>
   </div>
