--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -7,7 +7,7 @@
 {% block content %} 
 <div class="container">
   <br>
-      <h1 class="text-center display-5 text-primary">Signup</h1>
+      <h1 class="display-5 text-primary">Signup</h1>
 
       <div class="text-danger font-weight-bold">
         {% for error in errors %} 
